tests/error/require_fail.gw
#import NonExisting

var ftbl f;
<<< var SinOsc s >>>;
